# libbchat-util

./: .drone.jsonnet  .gitignore  .gitmodules  CMakeLists.txt  README.md  beldex_test.cpp  compile_test.sh  libbchat-util.pc.in
cmake/: AddStaticBundleLib.cmake  GenVersion.cmake  StaticBuild.cmake
docs/api/: .gitignore  Makefile  README.md  api-to-markdown.py  make-docs.sh  mkdocs.yml  requirements.txt
docs/api/docs/: config_merge_logic.md  index.md
docs/api/docs/stylesheets/: extra.css
include/bchat/: attachments.h  attachments.hpp  bchat_encrypt.h  bchat_encrypt.hpp  bchat_protocol.h  bchat_protocol.hpp  blinding.h  blinding.hpp  bt_merge.hpp  config.hpp  curve25519.h  curve25519.hpp  ed25519.h  ed25519.hpp  export.h  fields.hpp  file.hpp  hash.h  hash.hpp  logging.h  logging.hpp  multi_encrypt.h  multi_encrypt.hpp  platform.hpp  pro_backend.h  pro_backend.hpp  random.h  random.hpp  sodium_array.hpp  types.hpp  util.h  util.hpp  version.h  xed25519.h  xed25519.hpp
include/bchat/config/: base.h  base.hpp  community.h  community.hpp  contacts.h  contacts.hpp  convo_info_volatile.h  convo_info_volatile.hpp  encrypt.h  encrypt.hpp  error.h  expiring.hpp  local.h  local.hpp  namespaces.h  namespaces.hpp  notify.hpp  pro.h  pro.hpp  profile_pic.h  profile_pic.hpp  protos.hpp  theme.h  theme.hpp  user_groups.h  user_groups.hpp  user_profile.h  user_profile.hpp  util.h
include/bchat/config/groups/: info.h  info.hpp  keys.h  keys.hpp  members.h  members.hpp
include/bchat/network/: bchat_network.h  bchat_network.hpp  bchat_network_types.h  bchat_network_types.hpp  key_types.hpp  master_node.h  master_node.hpp  mnode_pool.hpp  network_config.hpp  network_opt.hpp  request_queue.hpp  swarm.hpp
include/bchat/network/backends/: backend_util.hpp  bchat_file_server.h  bchat_file_server.hpp  bchat_open_group_server.h  bchat_open_group_server.hpp
include/bchat/network/routing/: belnet_router.hpp  direct_router.hpp  network_router.hpp  onion_request_router.hpp
include/bchat/network/transport/: network_transport.hpp  quic_transport.hpp
include/bchat/onionreq/: builder.h  builder.hpp  hop_encryption.hpp  parser.hpp  response_parser.h  response_parser.hpp
include/session/: attachments.h  attachments.hpp  bchat_encrypt.h  bchat_encrypt.hpp  bchat_protocol.hpp  blinding.h  blinding.hpp  config.hpp  curve25519.hpp  ed25519.h  ed25519.hpp  fields.hpp  file.hpp  hash.hpp  logging.hpp  multi_encrypt.h  multi_encrypt.hpp  pro_backend.h  pro_backend.hpp  random.h  random.hpp  session_protocol.h  session_protocol.hpp  types.h  types.hpp  util.h  util.hpp  xed25519.hpp
include/session/config/: base.h  base.hpp  community.hpp  contacts.h  contacts.hpp  convo_info_volatile.h  convo_info_volatile.hpp  encrypt.hpp  local.h  local.hpp  namespaces.hpp  notify.h  notify.hpp  pro.h  pro.hpp  profile_pic.hpp  protos.hpp  theme.hpp  user_groups.h  user_groups.hpp  user_profile.h  user_profile.hpp
include/session/config/groups/: info.h  info.hpp  keys.h  keys.hpp  members.h  members.hpp
include/session/network/: bchat_network.h  bchat_network.hpp  bchat_network_types.h  bchat_network_types.hpp  key_types.hpp  network_config.hpp  network_opt.hpp  request_queue.hpp  service_node.h  service_node.hpp  session_network.h  session_network.hpp  session_network_types.hpp  snode_pool.hpp  swarm.hpp
include/session/network/backends/: backend_util.hpp  bchat_file_server.h  bchat_file_server.hpp  bchat_open_group_server.h  bchat_open_group_server.hpp  session_file_server.h  session_file_server.hpp  (+2 more)
include/session/onionreq/: builder.h  builder.hpp  hop_encryption.hpp  parser.hpp  response_parser.hpp
proto/: BChatProtos.pb.cc  BChatProtos.pb.h  BChatProtos.proto  CMakeLists.txt  SessionProtos.pb.cc  SessionProtos.pb.h  SessionProtos.proto
src/: CMakeLists.txt  attachments.cpp  bchat_encrypt.cpp  bchat_protocol.cpp  blinding.cpp  bt_merge.cpp  config.cpp  curve25519.cpp  ed25519.cpp  fields.cpp  file.cpp  hash.cpp  internal-util.hpp  logging.cpp  multi_encrypt.cpp  pro_backend.cpp  random.cpp  sodium_array.cpp  types.cpp  util.cpp  version.c.in  xed25519.cpp
src/config/: base.cpp  community.cpp  contacts.cpp  convo_info_volatile.cpp  encrypt.cpp  error.c  internal.cpp  internal.hpp  local.cpp  pro.cpp  protos.cpp  user_groups.cpp  user_profile.cpp
src/config/groups/: info.cpp  keys.cpp  members.cpp
src/network/: bchat_network.cpp  bchat_network_internal.cpp  bchat_network_internal.hpp  bchat_network_types.cpp  key_types.cpp  master_node.cpp  mnode_pool.cpp  network_config.cpp  request_queue.cpp  session_network_internal.cpp  swarm.cpp
src/network/backends/: bchat_file_server.cpp  bchat_open_group_server.cpp  session_file_server.cpp
src/network/routing/: belnet_router.cpp  direct_router.cpp  onion_request_router.cpp  session_router_router.cpp
src/network/transport/: quic_transport.cpp
src/onionreq/: builder.cpp  hop_encryption.cpp  parser.cpp  response_parser.cpp
tests/: CMakeLists.txt  case_logger.cpp  catch2_bt_format.hpp  main.cpp  static_bundle.cpp  swarm-auth-test.cpp  test_attachment_encrypt.cpp  test_backed_bchat_open_group_server.cpp  test_backed_session_open_group_server.cpp  test_backend_bchat_file_server.cpp  test_backend_session_file_server.cpp  test_bchat_encrypt.cpp  test_bchat_protocol.cpp  test_blinding.cpp  test_bt_merge.cpp  test_bugs.cpp  test_compression.cpp  test_config_contacts.cpp  test_config_convo_info_volatile.cpp  test_config_local.cpp  test_config_pro.cpp  test_config_user_groups.cpp  test_config_userprofile.cpp  test_configdata.cpp  test_curve25519.cpp  test_ed25519.cpp  test_encrypt.cpp  test_group_info.cpp  test_group_keys.cpp  test_group_members.cpp  test_hash.cpp  test_logging.cpp  test_mnode_pool.cpp  test_multi_encrypt.cpp  test_network_swarm.cpp  test_onion_request_router.cpp  test_onionreq.cpp  test_pro_backend.cpp  test_proto.cpp  test_random.cpp  (+7 more)
utils/: android.sh  deb.bchat.foundation.gpg  deb.session.foundation.gpg  format.sh  ios.sh  macos.sh  static-bundle.sh
utils/ci/: drone-docs-upload.sh  drone-format-verify.sh  drone-static-upload.sh
(+7 files in other folders)
